--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2025. All Rights Reserved.'
+title: Dongzhi Luo's Homepage
+page-top-title: Dongzhi Luo
+top-section-bg-text: Maybe this is a interesting soul.
+home-subtitle: Dongzhi Luo&INTJ;|&INTJ;罗冬致
+copyright-text: '&copy; Dongzhi Luo 2025-2027. All Rights Reserved.'
