--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Dongzhi Luo's Homepage
 page-top-title: Dongzhi Luo
 top-section-bg-text: Maybe this is a interesting soul.
-home-subtitle: Dongzhi Luo&INTJ;|&INTJ;罗冬致
+home-subtitle: Dongzhi Luo  |  罗冬致
 copyright-text: '&copy; Dongzhi Luo 2025-2027. All Rights Reserved.'
